--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#111827" />
+    <meta name="author" content="Valentin Menvielle Candia" />
     <meta
-      name="description"
-      content="Portfolio Valentin Menvielle Candia - Software Developer"
-    />
+    name="description"
+    content="Valentin Menvielle Candia Portfolio - Software developer"
+  />
+    <meta name="keywords" content="software development, web development, JavaScript, React, Typescript, Angular, Frontend, React Native" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Portolio - Valentin Menvielle Candia</title>
+    <title>Valentin Menvielle Candia - Software Developer Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
